--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
                     <nav class="navbar navbar-default " role="navigation" style="margin-top: 30px">
                         <div class="container-fluid">
                             <div class="navbar-header">
-                                <a class="navbar-brand" href="#">小风博客</a>
+                                <a class="navbar-brand"href="#"><font color="white">小风博客</font></a>
                             </div>
 
                             <div class="navbar-form navbar-left" style="width: 500px">
