--- a/edit.html
+++ b/edit.html
@@ -58,7 +58,7 @@
 
                             <div id="epiceditor"></div>
 
-                            <button type="submit" @click="import" class="btn btn-default">提交</button>
+                            <button type="submit" @click="importFile" class="btn btn-default">提交</button>
                         </form>
                     </div>
                 </div>
